# CPlusPlusTests

./: sudo_code_sorts
Makefile_test_1/: Makefile  func.c  hellomake  hellomake.c  readme
Makefile_test_2/: readme
SharedLIbraryTest/: foo.c  readme  test
abstract_factory_pattern/: main.cpp
associatioTest/: associatioTest.pro  doctor.cpp  doctor.h  main.cpp  patient.cpp  patient.h  tool.cpp  tool.h
binary_tree_test/: a.out  binary_tree.h  main.cpp
boost_test/: firstBoost  firstBoost.cpp  readme.txt
cMakeTest/: CMakeLists.txt  readme  test.cpp
child_widgets/: app.cpp  child_widgets.pro
cmake_test/: read.me
cmake_test/step1/: CMakeLists.txt  step1Config.h.in  tutorial.cpp
cmake_test/step2/: CMakeLists.txt  step2Config.h.in
compare_test/: a.out  main.cpp
compositionTest/: compositionTest.pro  creature.cpp  creature.h  fraction.h  main.cpp  point2d.cpp  point2d.h  tool.cpp  tool.h
containerTest/: intarray.cpp
container_test/: person.h
create_a_window/: app.cpp  create_a_window.pro
curl_download_image_test/: curl_download_image  help  main.cpp
friend_test/: classA.cpp  classA.h  classB.cpp  classB.h  display.cpp  display.h  friend_test.pro  main.cpp
fstream_test/: a.out  main.cpp  test.txt
functor_test/: a.out  main.cpp
initializer_list_test/: app.ext  intArray.cpp  intArray.h  main.cpp
int_array_test/: containerTest.pro  intarray.cpp  intarray.h
iterator_test/: mylist.h  mylist_iterator.h  mylist_node.h
linked_list_test/: linkedlist.h  node.h
linked_list_with_iterator_test/: a.out  linkedlist.h  linkedlist_const_iterator.h  linkedlist_iterator.h  main.cpp  node.h
macro_test/: main.c
map_test/: main.cpp  my_unordered_map.h
map_test2/: a.out  main.cpp  main.cpp.autosave
move_constructors_and_move_assignment_test/: a.out  auto_ptr.h  main  main.cpp  resource.h
multi_thread_test_event_handle/: a.out  main.cpp
multi_thread_test_initialization/: a.out  readme.txt  thread.cpp
nested_layouts/: app.cpp  (+1 more)
spdtest/: CMakeLists.txt  test.cpp
spdtest/cmake/: spdlog.cmake
(+107 files in other folders)
